Banish DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,9 @@
 
 # Ignore bundler config.
 /.bundle
-
-# Ignore the default SQLite database.
-
-
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
 /tmp
-*/.DS_Store
+.DS_Store
 /app/assets/images/*
